--- a/src/app/domains/header/header.component.css
+++ b/src/app/domains/header/header.component.css
@@ -1,38 +1,137 @@
-.navbar {
+/* Fondo café oscuro para el header */
+.header-container .navbar {
+  background-color: #3b372f !important; /* Color café oscuro */
+}
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap");
+
+/* Aplicar los estilos al título */
+.navbar-brand {
+  font-family: "Playfair Display", serif; /* Fuente elegante */
+  color: #d4af37; /* Color dorado suave */
+  font-size: 3.5rem; /* Tamaño de la fuente */
+  font-weight: bold; /* Negrita para resaltar */
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7); /* Sombra sutil para hacer que el texto resalte */
+}
+
+/* Estilo de brillo para los enlaces de navegación */
+.header-container .nav-link {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.4rem;
+  outline: none;
+  font-size: 1rem;
+  font-weight: 600;
+  background-color: #3b372f; /* Color de fondo similar a la barra de búsqueda */
+  color: #f0f0f0; /* Color de texto similar a la barra de búsqueda */
+  transition: background-color 0.3s, box-shadow 0.3s; /* Transición suave para el color de fondo y la sombra */
+  box-shadow: 0px 0px 60px #d4af37; /* Sombra para el efecto de brillo */
+  -webkit-box-reflect: below 10px
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4)); /* Reflejo para el brillo */
+}
+
+.header-container .nav-link:hover {
+  background-color: #d4af37; /* Cambio de color de fondo al pasar el cursor */
+  color: #2e2b26; /* Cambio de color de texto al pasar el cursor */
+}
+
+.header-container .nav-link:active,
+.header-container .nav-link:focus {
+  transform: scale(0.92); /* Efecto de escala al hacer clic o enfocar */
+  box-shadow: 0px 0px 80px #d4af37; /* Sombra más intensa al hacer clic o enfocar */
+}
+
+/* Estilos para la barra de búsqueda */
+.header-container .search-bar {
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
+
+.header-container .search-input {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0.4rem 0 0 0.4rem;
+  outline: none;
+  font-size: 1rem;
+  font-weight: 600;
+  background-color: #3b372f;
+  color: #f0f0f0;
+  transition: background-color 0.3s;
+  box-shadow: 0px 0px 60px #d4af37;
+  -webkit-box-reflect: below 10px
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
+}
+
+.header-container .search-input::placeholder {
+  color: #d4af37;
+}
+
+.header-container .search-btn {
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 0 0.4rem 0.4rem 0;
+  background-color: #3b372f;
+  color: #f0f0f0;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: 0.6s;
+  box-shadow: 0px 0px 60px #d4af37;
+  -webkit-box-reflect: below 10px
+    linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.4));
+}
+
+.header-container .search-btn:hover {
+  background-color: #d4af37;
+  color: #2e2b26;
+}
+
+.header-container .search-btn:active,
+.header-container .search-input:focus {
+  transform: scale(0.92);
+}
+
+/* Estilos actuales del header */
+.header-container .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #f8f9fa;
   padding: 1rem;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Sombra adicional */
 }
 
-.logo a {
+.header-container .logo a {
   font-weight: bold;
   text-decoration: none;
   color: #333;
 }
 
-.navbar-toggler {
+.header-container .navbar-toggler {
   background: none;
   border: none;
   cursor: pointer;
 }
 
-.navbar-toggler-icon {
+.header-container .navbar-toggler-icon {
   width: 30px;
   height: 30px;
   background-color: #333;
 }
 
-.navbar-collapse {
+.header-container .navbar-collapse {
   display: none;
 }
 
-.navbar-collapse.show {
+.header-container .navbar-collapse.show {
   display: flex;
 }
 
-.navbar-nav {
+.header-container .navbar-nav {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -40,35 +139,29 @@
   gap: 1rem;
 }
 
-.nav-item {
+.header-container .nav-item {
   margin: 0 1rem;
 }
 
-.nav-link {
-  text-decoration: none;
-  color: #333;
-  padding: 0.5rem 1rem;
-}
-
-.dropdown-menu {
+.header-container .dropdown-menu {
   display: none;
   position: absolute;
   background-color: #f8f9fa;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.dropdown-item {
+.header-container .dropdown-item {
   padding: 0.5rem 1rem;
   text-decoration: none;
   color: #333;
   display: block;
 }
 
-.dropdown-item:hover {
+.header-container .dropdown-item:hover {
   background-color: #e9ecef;
 }
 
-.dropdown-toggle:hover + .dropdown-menu,
-.dropdown-menu:hover {
+.header-container .dropdown-toggle:hover + .dropdown-menu,
+.header-container .dropdown-menu:hover {
   display: block;
 }
