--- a/src/app/domains/header/header.component.html
+++ b/src/app/domains/header/header.component.html
@@ -1,11 +1,15 @@
 <header class="header-container">
   <nav
-    class="navbar navbar-light navbar-expand-md justify-content-center fixed-top bg-light"
+    class="navbar navbar-light navbar-expand-md justify-content-center fixed-top"
   >
     <div class="container-fluid">
       <a href="#" class="navbar-brand d-flex w-50 mr-auto">
         <strong>Creative Horizon</strong>
       </a>
+      <div class="search-bar">
+        <input class="search-input" type="text" placeholder="Buscar..." />
+        <button class="search-btn">Buscar</button>
+      </div>
       <button
         class="navbar-toggler"
         type="button"
@@ -20,7 +24,7 @@
       <div class="navbar-collapse collapse w-100" id="mainNavBar">
         <ul class="navbar-nav w-100 justify-content-center">
           <li class="nav-item">
-            <a class="nav-link" href="#">Products</a>
+            <a class="nav-link" href="#">Incio</a>
           </li>
           <li class="nav-item dropdown">
             <a
@@ -33,15 +37,13 @@
               Categories
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </li>
+              <li><a class="dropdown-item" href="#">Pinceles</a></li>
+              <li><a class="dropdown-item" href="#">Pinturas</a></li>
+              <li><a class="dropdown-item" href="#">Lienzos</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#">Productos</a>
           </li>
         </ul>
         <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
