--- a/src/app/domains/home/home.component.html
+++ b/src/app/domains/home/home.component.html
@@ -3,11 +3,21 @@
   <section id="hero">
     <div class="container">
       <div class="row">
-        <div class="col-6"></div>
-        <div class="col-6"></div>
+        <div class="col-6">aqui</div>
+
+        <div class="col-6 d-flex justify-content-end">
+          <video class="video-container" autoplay muted loop>
+            <source
+              src="../../../assets/video/2-pintora.mp4"
+              type="video/mp4"
+            />
+            Tu navegador no soporta el elemento de video.
+          </video>
+        </div>
       </div>
     </div>
   </section>
+
   <section id="services" class="py-5">
     <div class="container">
       <div class="row">
@@ -53,7 +63,7 @@
   <section id="featured" class="py-5">
     <div class="container">
       <div class="section-text-combo">
-        <h2>Ad lorem ipsum</h2>
+        <h2>Nuestros Productos</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti
           accusantium voluptas voluptatibus perferendis velit nostrum qui
