--- a/src/app/domains/home/home.component.css
+++ b/src/app/domains/home/home.component.css
@@ -1,11 +1,7 @@
-/* ====================
-- General styles
-==================== */
-
 main {
   background-color: #9c7c45d5;
   min-height: 80vh;
-  margin-top: 70px;
+  margin-top: 100px;
 }
 
 .section-text-combo {
@@ -22,102 +18,175 @@ main {
   line-height: 1.2rem;
 }
 
-/* ====================
-  - Hero section
-  ==================== */
-
-/* Estilos para la sección #hero */
-/* Estilos para la sección #hero */
 #hero {
-  /*  width: 1200px;
-  height: 750px; */
+  max-width: 100%;
+  padding-top: 150px;
+  position: relative;
+}
+
+.row {
+  max-width: 100%;
+}
+
+.col-8 {
+  width: 800px;
+  height: 400px;
   background-image: url("../../../assets/images/FondoArte-1.webp");
   background-size: cover;
   background-position: center;
 }
-.container {
-  /*  display: flex; */
-}
-.video-container {
-  margin-top: 15px;
-  padding: 5px;
-  width: auto;
-  height: 300px;
-}
-/* ====================
-  - Products Section
-  ==================== */
 
-.product {
-  position: relative;
-}
-
-.product figure img {
-  width: 100%;
-  aspect-ratio: 1 / 1.1;
-  object-fit: cover;
-}
-.product figure figcaption {
-  margin-top: 0.5rem;
-}
-
-.product figure figcaption .featured {
-  position: absolute;
-  top: 0;
-  right: 0;
-  text-transform: uppercase;
-  font-size: 0.75rem;
-  color: white;
-  background: blue;
-  font-weight: 600;
-  padding: 0.2rem 0.4rem;
-  letter-spacing: 0.1rem;
-}
-
-.product figure figcaption h3 {
-  margin: 0;
+.col-4 {
+  width: 480px;
+  font-family: "Playfair Display", serif;
+  color: #251c05bb;
   font-size: 1rem;
+  font-weight: bold;
+  text-shadow: 1px 1px 2px rgba(196, 178, 15, 0.7);
+  padding: 20px;
 }
 
-/* ====================
-  - Newsletter
-  ==================== */
-
-#newsletter h2 {
-}
-#newsletter p {
-  font-size: 0.9rem;
-  line-height: 1.2rem;
-}
-#newsletter small {
-  color: red;
+.section-text-combo {
+  font-family: "Playfair Display", serif;
+  color: #251c05bb;
+  font-size: 1rem;
+  font-weight: bold;
+  text-shadow: 1px 1px 2px rgba(196, 178, 15, 0.7);
 }
 
-/* ====================
-      - Media queries
-     
-        xs   <  576px
-        sm   ≥  576px
-        md   ≥  768px
-        lg   ≥  992px
-        xl   ≥  1200px
-        xxl  ≥  1400px
-      ==================== */
+.info {
+  text-align: center;
+  color: #333;
+  padding: 1rem;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
-@media screen and (max-width: 992px) {
-}
-
-@media screen and (max-width: 768px) {
-  .section-text-combo p {
-    width: 80%;
-  }
-}
-
-@media screen and (max-width: 576px) {
-  html {
-    font-size: 18px;
-  }
-  .section-text-combo p {
+  .page-img {
     width: 100%;
+    height: 400px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-bottom: 1rem;
+  }
+
+  figcaption {
+    margin-top: 1rem;
+  }
+
+  figcaption h4 {
+    margin: 0.5rem 0;
+    font-family: "Playfair Display", serif;
+    font-size: 1.5rem;
+  }
+
+  figcaption p {
+    font-family: "Roboto", sans-serif;
+    font-size: 1rem;
+    line-height: 1.5;
+  }
+
+  /* Productos Destacados */
+  #featured .product {
+    max-width: 100%;
+    text-align: center;
+  }
+
+  #featured .product img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+  }
+
+  #featured .product figure {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #featured .product figcaption {
+    margin-top: 1rem;
+  }
+
+  #featured .product figcaption .featured {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-size: 1.2rem;
+    font-weight: bold;
+  }
+
+  #featured .product figcaption h3 {
+    margin: 0.5rem 0;
+  }
+
+  #featured .product figcaption p {
+    margin: 0;
+  }
+
+  .product {
+    position: relative;
+  }
+
+  .product figure img {
+    width: 100%;
+    aspect-ratio: 1 / 1.1;
+    object-fit: cover;
+  }
+
+  .product figure figcaption {
+    margin-top: 0.5rem;
+  }
+
+  .product figure figcaption .featured {
+    position: absolute;
+    top: 0;
+    right: 0;
+    text-transform: uppercase;
+    font-size: 0.75rem;
+    color: white;
+    background: rgb(90, 85, 4);
+    font-weight: 600;
+    padding: 0.2rem 0.4rem;
+    letter-spacing: 0.1rem;
+  }
+
+  .product figure figcaption h3 {
+    margin: 0;
+    font-size: 1rem;
+  }
+
+  #newsletter h2 {
+    font-family: "Playfair Display", serif;
+    color: #251c05bb;
+    font-size: 1rem;
+    font-weight: bold;
+    text-shadow: 1px 1px 2px rgba(196, 178, 15, 0.7);
+  }
+
+  #newsletter p {
+    font-size: 0.9rem;
+    line-height: 1.2rem;
+  }
+
+  #newsletter small {
+    color: red;
+  }
+
+  @media screen and (max-width: 992px) {
+  }
+
+  @media screen and (max-width: 768px) {
+    .section-text-combo p {
+      width: 80%;
+    }
+  }
+
+  @media screen and (max-width: 576px) {
+    html {
+      font-size: 18px;
+    }
+
+    .section-text-combo p {
+      width: 100%;
+    }
   }
 }
