--- a/src/app/domains/home/home.component.html
+++ b/src/app/domains/home/home.component.html
@@ -1,18 +1,25 @@
 <app-header></app-header>
 <main>
-  <section id="hero">
+  <section id="hero" class="d-flex align-items-center">
     <div class="container">
       <div class="row">
-        <div class="col-6">aqui</div>
-
-        <div class="col-6 d-flex justify-content-end">
-          <video class="video-container" autoplay muted loop>
-            <source
-              src="../../../assets/video/2-pintora.mp4"
-              type="video/mp4"
-            />
-            Tu navegador no soporta el elemento de video.
-          </video>
+        <div class="col-8"></div>
+        <div
+          class="col-4 d-flex flex-column justify-content-center align-items-start"
+        >
+          <h1>
+            Bienvenidos. <br />Creative Horizon <br />donde el arte y el lujo se
+            unen
+          </h1>
+          <p>
+            Explora un santuario de creatividad con nuestra exclusiva colección
+            de materiales y herramientas de arte de primera calidad. En Creative
+            Horizon, cada artículo, desde nuestros pinceles de precisión hasta
+            nuestros lienzos premium, ha sido seleccionado para inspirar y
+            satisfacer a los artistas más exigentes. Descubre la excelencia y
+            eleva tu experiencia artística con la sofisticación que solo
+            nosotros podemos ofrecer.
+          </p>
         </div>
       </div>
     </div>
@@ -23,36 +30,57 @@
       <div class="row">
         <div class="col-12 col-sm-4 col-md-4 text-center">
           <figure class="info">
-            <img src="./images/truck.svg" alt="" />
+            <a href="ruta_a_la_pagina_de_pinceles">
+              <img
+                class="page-img"
+                src="../../../assets/images/Pincel-fondo-A.webp"
+                alt="Imagen de pinceles"
+              />
+            </a>
             <figcaption>
-              <h4>Envío gratuito</h4>
+              <h4>Pinceles</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum,
-                perferendis!
+                "Descubre la herramienta esencial para cada artista. Haz clic en
+                la imagen para explorar nuestra exquisita colección de pinceles,
+                diseñados para transformar tus visiones en obras maestras."
               </p>
             </figcaption>
           </figure>
         </div>
         <div class="col-12 col-sm-4 col-md-4 text-center">
           <figure class="info">
-            <img src="./images/clock.svg" alt="" />
+            <a href="ruta_a_la_pagina_de_pinturas">
+              <img
+                class="page-img"
+                src="../../../assets/images/Pintura-fondo-B.webp"
+                alt="Imagen de pinturas"
+              />
+            </a>
             <figcaption>
-              <h4>Soporte 24/7</h4>
+              <h4>Pinturas</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam,
-                possimus.
+                "Explora un universo de color y creatividad. Al hacer clic en la
+                imagen, te llevarás a nuestra selección premium de pinturas,
+                perfectas para darle vida a tus ideas artísticas más vibrantes."
               </p>
             </figcaption>
           </figure>
         </div>
         <div class="col-12 col-sm-4 col-md-4 text-center">
           <figure class="info">
-            <img src="./images/dollar-sign.svg" alt="" />
+            <a href="ruta_a_la_pagina_de_lienzos">
+              <img
+                class="page-img"
+                src="../../../assets/images/Lienzo-fondo-C.webp"
+                alt="Imagen de lienzos"
+              />
+            </a>
             <figcaption>
-              <h4>Reembolso</h4>
+              <h4>Lienzo</h4>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad,
-                cumque.
+                "El lienzo perfecto para cada creación espera por ti. Haz clic
+                en la imagen para acceder a nuestra gama exclusiva de lienzos,
+                el soporte ideal para tus proyectos más inspiradores."
               </p>
             </figcaption>
           </figure>
@@ -61,17 +89,19 @@
     </div>
   </section>
   <section id="featured" class="py-5">
-    <div class="container">
+    <div class="container text-center">
+      <!-- Añadido text-center para centrar el contenido -->
       <div class="section-text-combo">
-        <h2>Nuestros Productos</h2>
+        <h2>Productos Destacados</h2>
         <p>
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti
           accusantium voluptas voluptatibus perferendis velit nostrum qui
           repellendus laboriosam.
         </p>
       </div>
-      <div class="row">
-        <div class="col-12 col-sm-6 col-lg-3">
+      <div class="row justify-content-center">
+        <!-- Añadido justify-content-center para centrar las columnas -->
+        <div class="col-12 col-sm-6 col-lg-4">
           <div class="product">
             <figure>
               <img
@@ -79,14 +109,14 @@
                 alt=""
               />
               <figcaption>
-                <span class="featured">Featured</span>
+                <span class="featured">Pinceles</span>
                 <h3>Product 1</h3>
                 <p>$ 60.00</p>
               </figcaption>
             </figure>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-lg-3">
+        <div class="col-12 col-sm-6 col-lg-4">
           <div class="product">
             <figure>
               <img
@@ -94,14 +124,14 @@
                 alt=""
               />
               <figcaption>
-                <span class="featured">Featured</span>
+                <span class="featured">Pinturas</span>
                 <h3>Product 1</h3>
                 <p>$ 60.00</p>
               </figcaption>
             </figure>
           </div>
         </div>
-        <div class="col-12 col-sm-6 col-lg-3">
+        <div class="col-12 col-sm-6 col-lg-4">
           <div class="product">
             <figure>
               <img
@@ -109,22 +139,7 @@
                 alt=""
               />
               <figcaption>
-                <span class="featured">Featured</span>
-                <h3>Product 1</h3>
-                <p>$ 60.00</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="product">
-            <figure>
-              <img
-                src="https://htmldemo.net/flone/flone/assets/img/product/hm3-pro-2.jpg"
-                alt=""
-              />
-              <figcaption>
-                <span class="featured">Featured</span>
+                <span class="featured">Lienzos</span>
                 <h3>Product 1</h3>
                 <p>$ 60.00</p>
               </figcaption>
@@ -134,6 +149,7 @@
       </div>
     </div>
   </section>
+
   <section id="newsletter" class="py-5">
     <div class="container">
       <div class="row">
