--- a/src/app/domains/footer/footer.component.html
+++ b/src/app/domains/footer/footer.component.html
@@ -2,37 +2,50 @@
   <div class="container">
     <div class="row">
       <div class="col-12 col-sm-6 col-md-3 mb-4">
-        <strong>BIT Shop</strong>
+        <strong>Creative Horizon</strong>
       </div>
       <div class="col-12 col-sm-6 col-md-3">
         <ul>
-          <li class="list-title">Title 1</li>
-          <li>Item 1</li>
-          <li>Item 2</li>
-          <li>Item 3</li>
-          <li>Item 4</li>
+          <li class="list-title">Nuestras redes</li>
+          <li>
+            <a href="#">
+              <img
+                src="../../../assets/images/facebook.png"
+                alt="Facebook Logo"
+              />
+              Facebook
+            </a>
+          </li>
+
+          <li>
+            <a href="#"
+              ><img
+                src="../../../assets/images/instagram.png"
+                alt="Facebook Logo"
+              />
+              Instagram</a
+            >
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                src="../../../assets/images/x.png"
+                alt="Facebook Logo"
+              />X</a
+            >
+          </li>
         </ul>
       </div>
       <div class="col-12 col-sm-6 col-md-3">
         <ul>
-          <li class="list-title">Title 1</li>
-          <li>Item 1</li>
-          <li>Item 2</li>
-          <li>Item 3</li>
-          <li>Item 4</li>
+          <li class="list-title">Nuestra tienda</li>
+          <li><p>Dirección:</p></li>
+          <li><p>Calle de la Creatividad, 123</p></li>
+          <li><p>Ciudad Arte</p></li>
+          <li>
+            <p>&copy; 2024 Creative Horizon. Todos los derechos reservados.</p>
+          </li>
         </ul>
-      </div>
-      <div class="col-12 col-sm-6 col-md-3">
-        <ul>
-          <li class="list-title">Title 1</li>
-          <li>Item 1</li>
-          <li>Item 2</li>
-          <li>Item 3</li>
-          <li>Item 4</li>
-        </ul>
-      </div>
-      <div class="col-12 pt-5 text-center">
-        <p class="copyright">© Bogotá Institute of Technology 2024</p>
       </div>
     </div>
   </div>
