--- a/src/app/domains/home/home.component.html
+++ b/src/app/domains/home/home.component.html
@@ -94,9 +94,8 @@
       <div class="section-text-combo">
         <h2>Productos Destacados</h2>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti
-          accusantium voluptas voluptatibus perferendis velit nostrum qui
-          repellendus laboriosam.
+          Aquie puedes ver los productos preferidos por nuestros usuarios este
+          mes.
         </p>
       </div>
       <div class="row justify-content-center">
@@ -150,7 +149,7 @@
     </div>
   </section>
 
-  <section id="newsletter" class="py-5">
+  <!--  <section id="newsletter" class="py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
@@ -181,6 +180,6 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 </main>
 <app-footer></app-footer>
