--- a/src/app/domains/footer/footer.component.css
+++ b/src/app/domains/footer/footer.component.css
@@ -1,6 +1,21 @@
 footer {
-  background-color: #212529;
-  color: white;
+  background-color: #3b3024;
+  color: #f5f5dc;
+  text-align: center;
+  padding: 10px;
+  margin-top: auto;
+  position: relative;
+}
+
+footer::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 5px;
+  background: linear-gradient(to right, #d4af37, #3b372f, #d4af37);
+  position: absolute;
+  top: -5px;
+  left: 0;
 }
 
 footer ul {
@@ -23,4 +38,10 @@ footer ul li.list-title {
 footer .copyright {
   font-size: 0.9rem;
   color: #888;
+}
+li a img {
+  width: 20px; /* Ajusta el tamaño según tus necesidades */
+  height: auto;
+  vertical-align: middle; /* Para alinear verticalmente la imagen con el texto */
+  margin-right: 5px; /* Espacio entre la imagen y el texto */
 }
