--- a/src/app/domains/header/header.component.html
+++ b/src/app/domains/header/header.component.html
@@ -24,7 +24,7 @@
       <div class="navbar-collapse collapse w-100" id="mainNavBar">
         <ul class="navbar-nav w-100 justify-content-center">
           <li class="nav-item">
-            <a class="nav-link" href="#">Incio</a>
+            <a class="nav-link" [routerLink]="['/']">Inicio</a>
           </li>
           <li class="nav-item dropdown">
             <a
@@ -43,7 +43,7 @@
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Productos</a>
+            <a class="nav-link" [routerLink]="['/products']">Productos</a>
           </li>
         </ul>
         <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
@@ -54,7 +54,7 @@
             <a class="nav-link" href="#">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#"><i class="bi bi-bag"></i></a>
+            <a class="nav-link" href="#">???<i class="bi bi-bag"></i></a>
           </li>
         </ul>
       </div>
