--- a/src/app/domains/header/header.component.html
+++ b/src/app/domains/header/header.component.html
@@ -3,7 +3,7 @@
     class="navbar navbar-light navbar-expand-md justify-content-center fixed-top"
   >
     <div class="container-fluid">
-      <a href="#" class="navbar-brand d-flex w-50 mr-auto">
+      <a class="navbar-brand d-flex w-50 mr-auto" href="#">
         <strong>Creative Horizon</strong>
       </a>
       <div class="search-bar">
