--- a/src/app/domains/products/products.component.html
+++ b/src/app/domains/products/products.component.html
@@ -1,225 +1,19 @@
 <app-header></app-header>
-<div class="container">
-  <nav
-    class="navbar navbar-light navbar-expand-md justify-content-center fixed-top bg-light"
-  >
-    <div class="container-fluid">
-      <div class="navbar-collapse collapse w-100" id="mainNavBar"></div>
-    </div>
-  </nav>
+<main>
   <section id="products" class="my-5 pt-5">
     <div class="container">
-      <div class="section-text-combo">
-        <h2>Ad lorem ipsum</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corrupti
-          accusantium voluptas voluptatibus perferendis velit nostrum qui
-          repellendus laboriosam.
-        </p>
-      </div>
       <div class="row">
-        <div class="col-12 col-sm-6 col-lg-3">
+        <div class="col-12 col-sm-6 col-lg-3" *ngFor="let product of products">
           <div class="product">
-            <figure>
-              <img
-                src="https://htmldemo.net/flone/flone/assets/img/product/hm3-pro-2.jpg"
-                alt=""
-              />
-              <figcaption>
-                <h3>Product 1</h3>
-                <p>$ 60.00</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="product">
-            <figure>
-              <img
-                src="https://htmldemo.net/flone/flone/assets/img/product/hm3-pro-2.jpg"
-                alt=""
-              />
-              <figcaption>
-                <h3>Product 1</h3>
-                <p>$ 60.00</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="product">
-            <figure>
-              <img
-                src="https://htmldemo.net/flone/flone/assets/img/product/hm3-pro-2.jpg"
-                alt=""
-              />
-              <figcaption>
-                <h3>Product 1</h3>
-                <p>$ 60.00</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="product">
-            <figure>
-              <img
-                src="https://htmldemo.net/flone/flone/assets/img/product/hm3-pro-2.jpg"
-                alt=""
-              />
-              <figcaption>
-                <h3>Product 1</h3>
-                <p>$ 60.00</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="product">
-            <figure>
-              <img
-                src="https://htmldemo.net/flone/flone/assets/img/product/hm3-pro-2.jpg"
-                alt=""
-              />
-              <figcaption>
-                <h3>Product 1</h3>
-                <p>$ 60.00</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="product">
-            <figure>
-              <img
-                src="https://htmldemo.net/flone/flone/assets/img/product/hm3-pro-2.jpg"
-                alt=""
-              />
-              <figcaption>
-                <h3>Product 1</h3>
-                <p>$ 60.00</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="product">
-            <figure>
-              <img
-                src="https://htmldemo.net/flone/flone/assets/img/product/hm3-pro-2.jpg"
-                alt=""
-              />
-              <figcaption>
-                <h3>Product 1</h3>
-                <p>$ 60.00</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="product">
-            <figure>
-              <img
-                src="https://htmldemo.net/flone/flone/assets/img/product/hm3-pro-2.jpg"
-                alt=""
-              />
-              <figcaption>
-                <h3>Product 1</h3>
-                <p>$ 60.00</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="product">
-            <figure>
-              <img
-                src="https://htmldemo.net/flone/flone/assets/img/product/hm3-pro-2.jpg"
-                alt=""
-              />
-              <figcaption>
-                <h3>Product 1</h3>
-                <p>$ 60.00</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="product">
-            <figure>
-              <img
-                src="https://htmldemo.net/flone/flone/assets/img/product/hm3-pro-2.jpg"
-                alt=""
-              />
-              <figcaption>
-                <h3>Product 1</h3>
-                <p>$ 60.00</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="product">
-            <figure>
-              <img
-                src="https://htmldemo.net/flone/flone/assets/img/product/hm3-pro-2.jpg"
-                alt=""
-              />
-              <figcaption>
-                <h3>Product 1</h3>
-                <p>$ 60.00</p>
-              </figcaption>
-            </figure>
-          </div>
-        </div>
-        <div class="col-12 col-sm-6 col-lg-3">
-          <div class="product">
-            <figure>
-              <img
-                src="https://htmldemo.net/flone/flone/assets/img/product/hm3-pro-2.jpg"
-                alt=""
-              />
-              <figcaption>
-                <h3>Product 1</h3>
-                <p>$ 60.00</p>
-              </figcaption>
-            </figure>
+            <a [routerLink]="['/products', product.id]">
+              <img [src]="product.image" alt="{{ product.name }}" />
+              <h3>{{ product.name }}</h3>
+              <p>{{ product.price | currency }}</p>
+            </a>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <section id="newsletter" class="my-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <h2>Ad lorem ipsum</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta
-            reprehenderit atque inventore obcaecati!
-          </p>
-        </div>
-        <div class="col-md-6">
-          <div class="input-group mb-1">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Recipient's username"
-              aria-label="Recipient's username"
-              aria-describedby="button-addon2"
-            />
-            <button
-              class="btn btn-outline-secondary"
-              type="button"
-              id="button-addon2"
-            >
-              Button
-            </button>
-          </div>
-          <small>Lorem ipsum dolor sit amet.</small>
-        </div>
-      </div>
-    </div>
-  </section>
-</div>
+</main>
 <app-footer></app-footer>
