--- a/src/app/domains/products/products.component.css
+++ b/src/app/domains/products/products.component.css
@@ -1,3 +1,13 @@
+.container {
+  margin-top: 40px;
+  background-color: #583c04c3 !important;
+  font-family: "Playfair Display", serif;
+  color: #d4af37;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+}
+
 .product {
   position: relative;
 }
@@ -17,8 +27,8 @@
   right: 0;
   text-transform: uppercase;
   font-size: 0.75rem;
-  color: white;
-  background: blue;
+  color: rgb(14, 13, 13);
+  background: rgb(14, 14, 15);
   font-weight: 600;
   padding: 0.2rem 0.4rem;
   letter-spacing: 0.1rem;
@@ -29,12 +39,6 @@
   font-size: 1rem;
 }
 
-/* ====================
-- Newsletter
-==================== */
-
-/* #newsletter h2 {
-} */
 #newsletter p {
   font-size: 0.9rem;
   line-height: 1.2rem;
