nav barr coded and login

--- a/src/app/domains/footer/footer.component.html
+++ b/src/app/domains/footer/footer.component.html
@@ -5,7 +5,8 @@
         <strong>Creative Horizon</strong>
       </div>
       <div class="col-12 col-sm-6 col-md-3">
-        <ul>
+        <ul class="social-links">
+          <!-- Añadir la clase social-links -->
           <li class="list-title">Nuestras redes</li>
           <li>
             <a href="#">
@@ -13,26 +14,20 @@
                 src="../../../assets/images/facebook.png"
                 alt="Facebook Logo"
               />
-              Facebook
             </a>
           </li>
-
           <li>
-            <a href="#"
-              ><img
+            <a href="#">
+              <img
                 src="../../../assets/images/instagram.png"
-                alt="Facebook Logo"
+                alt="Instagram Logo"
               />
-              Instagram</a
-            >
+            </a>
           </li>
           <li>
-            <a href="#"
-              ><img
-                src="../../../assets/images/x.png"
-                alt="Facebook Logo"
-              />X</a
-            >
+            <a href="#">
+              <img src="../../../assets/images/x.png" alt="X Logo" />
+            </a>
           </li>
         </ul>
       </div>
@@ -41,6 +36,11 @@
           <li class="list-title">Nuestra tienda</li>
           <li><p>Dirección:</p></li>
           <li><p>Calle de la Creatividad, 123</p></li>
+        </ul>
+      </div>
+      <div class="col-12 col-sm-6 col-md-3">
+        <ul>
+          <li class="list-title"></li>
           <li><p>Ciudad Arte</p></li>
           <li>
             <p>&copy; 2024 Creative Horizon. Todos los derechos reservados.</p>
