--- a/src/app/domains/footer/footer.component.css
+++ b/src/app/domains/footer/footer.component.css
@@ -3,8 +3,11 @@ footer {
   color: #f5f5dc;
   text-align: center;
   padding: 10px;
-  margin-top: auto;
-  position: relative;
+  position: relative; /* Cambiado a relative */
+  bottom: 0;
+  width: 100%;
+  height: 150px;
+  left: 0;
 }
 
 footer::before {
@@ -39,9 +42,20 @@ footer .copyright {
   font-size: 0.9rem;
   color: #888;
 }
+
 li a img {
   width: 20px;
   height: auto;
   vertical-align: middle;
   margin-right: 5px;
+}
+
+/* Estilos para la lista de redes sociales */
+.social-links {
+  display: flex;
+  gap: 10px;
+}
+
+.social-links li {
+  display: inline-block;
 }
