--- a/src/app/domains/header/header.component.html
+++ b/src/app/domains/header/header.component.html
@@ -37,9 +37,30 @@
               Categories
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Pinceles</a></li>
-              <li><a class="dropdown-item" href="#">Pinturas</a></li>
-              <li><a class="dropdown-item" href="#">Lienzos</a></li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  (click)="filterProducts('Pinceles')"
+                  >Pinceles</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  (click)="filterProducts('Pinturas')"
+                  >Pinturas</a
+                >
+              </li>
+              <li>
+                <a
+                  class="dropdown-item"
+                  href="#"
+                  (click)="filterProducts('Lienzos')"
+                  >Lienzos</a
+                >
+              </li>
             </ul>
           </li>
           <li class="nav-item">
@@ -48,10 +69,10 @@
         </ul>
         <ul class="nav navbar-nav ml-auto w-100 justify-content-end">
           <li class="nav-item">
-            <a class="nav-link" href="#">Register</a>
+            <a class="nav-link" [routerLink]="['/register']">Registro</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" [routerLink]="['/login']">Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">???<i class="bi bi-bag"></i></a>
