--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,22 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+  margin-top: 120px;
+  margin-bottom: 250px; /* Ajusta según sea necesario */
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
