--- a/src/app/domains/footer/footer.component.css
+++ b/src/app/domains/footer/footer.component.css
@@ -3,7 +3,7 @@ footer {
   color: #f5f5dc;
   text-align: center;
   padding: 10px;
-  position: relative; /* Cambiado a relative */
+  position: relative;
   bottom: 0;
   width: 100%;
   height: 150px;
@@ -50,7 +50,6 @@ li a img {
   margin-right: 5px;
 }
 
-/* Estilos para la lista de redes sociales */
 .social-links {
   display: flex;
   gap: 10px;
