--- a/src/app/domains/header/header.component.css
+++ b/src/app/domains/header/header.component.css
@@ -87,7 +87,6 @@
   transform: scale(0.92);
 }
 
-/* Estilos actuales del header */
 .header-container .navbar {
   display: flex;
   justify-content: space-between;
@@ -98,7 +97,7 @@
   top: 0;
   left: 0;
   z-index: 1000;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Sombra adicional */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .header-container .logo a {
