--- a/src/app/domains/products/products.component.html
+++ b/src/app/domains/products/products.component.html
@@ -1,18 +1,19 @@
-<app-header (categorySelected)="filterProducts($event)"></app-header>
+<!-- <app-header (categorySelected)="filterProducts($event)"></app-header>
+ -->
 <main>
   <section id="products" class="my-5 pt-5">
     <div class="container">
       <div class="row">
         <div
           class="col-12 col-sm-6 col-lg-3"
-          *ngFor="let product of filteredProducts"
+          *ngFor="let product of filteredProducts()"
         >
           <div class="product">
-            <a [routerLink]="['/products', product.id]">
-              <img [src]="product.image" alt="{{ product.name }}" />
+            <!--  <a [routerLink]="['/products', product._id]">
+              <img [src]="product.imageUrl" alt="{{ product.name }}" />
               <h3>{{ product.name }}</h3>
-              <p>{{ product.price | currency }}</p>
-            </a>
+              <p>{{ product.price | currency }}"></p>
+            </a> -->
           </div>
         </div>
       </div>
